--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           target: "/home/ci/intentionGenerator"
       - name: Purge Cache
         run : |
-          curl -X POST "https://api.cloudflare.com/client/v4/zones/${{secrets.ZONE_ID}}/purge_cache" \
-               -H "Authorization: Bearer {{secrets.PURGE_CACHE_TOKEN}}" \
-               -H "Content-Type: application/json" \
-               --data '{"purge_everything":true}'
+          curl --fail --show-error -X POST "https://api.cloudflare.com/client/v4/zones/${{secrets.ZONE_ID}}/purge_cache" \
+                -H "Authorization: Bearer ${{secrets.PURGE_CACHE_TOKEN}}" \
+                -H "Content-Type: application/json" \
+                --data '{"purge_everything":true}'
