--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: 22
           key: ${{secrets.SSH}}
-          source: "./components/*"
-          target: "/home/ci/intentionGenerator"
+          source: "./master/master/*"
+          target: "/home/ci/intentionGenerator/master"
       - name: Purge Cache
         run : |
           curl --fail --show-error -X POST "https://api.cloudflare.com/client/v4/zones/${{secrets.ZONE_ID}}/purge_cache" \
