--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: 22
           key: ${{secrets.SSH}}
-          source: "./master/master/*"
+          source: "./master/*"
           target: "/home/ci/intentionGenerator/master"
       - name: Purge Cache
         run : |
